# pilot

./: .gitignore  build_proto.sh  client.py  environment.py  game_socket_pb2.py  main.py  pyproject.toml
src/: client.py  environment.py  replay_memory.py
src/protobuf/: game_socket_pb2.py
src/tankwar/: __init__.py  client.py  environment.py  replay_memory.py  session_storage.py
src/tankwar/protobuf/: game_socket_pb2.py  game_socket_pb2.pyi
